# egypt

./: Cargo.toml  README.md  egyptian_fractions.wls
doc/: egyptian_fractions.ipynb  egyptian_fractions_rc.wls  egyptian_fractions_sums.wls  sqrt.ipynb  sqrt.wls
scripts/: bench_pell.sh  irrational.wl  pell.py
sqrt/: CMakeLists.txt  sqrt.c
src/: main.rs  rpn.rs
wl/: Egypt.wl  check.wls  test.wls
