[package]
name = "egypt"
version = "0.0.2"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
num-prime = "0.4"

[dependencies.rug]
version = "1.27"
default-features = false
features = ["integer", "rational", "std"]

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
debug = false